Add useful helpers

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
         "phpunit/phpunit": "^5.2.0"
     },
     "autoload": {
+        "files": [
+            "src/helpers.php"
+        ],
         "psr-4": {
             "Rinvex\\Country\\": "src/"
         }
