Drop illuminate dependencies

--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*"
+        "php": ">=5.5.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2.0"
