Apply few tweaks and enhancements

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,20 @@
 {
     "name": "rinvex/country",
-    "description": "Rinvex Country is a simple and lightweight package for retrieving country details with flexibility. A whole bunch of data including name, demonym, capital, iso codes, dialling codes, geo data, currencies, and other attributes for all 250 countries worldwide at your fingertips.",
+    "description": "Rinvex Country is a simple and lightweight package for retrieving country details with flexibility. A whole bunch of data including name, demonym, capital, iso codes, dialling codes, geo data, currencies, flags, emoji, and other attributes for all 250 countries worldwide at your fingertips.",
     "keywords": [
+        "flags",
         "rinvex",
         "country",
         "flexible",
-        "retrieve",
-        "simple"
+        "countries",
+        "currencies",
+        "geographic",
+        "languages",
+        "dialling",
+        "demonym",
+        "simple",
+        "emoji",
+        "svg"
     ],
     "license": "MIT",
     "homepage": "https://rinvex.com",
@@ -51,6 +59,9 @@
         "psr-4": {
             "Rinvex\\Authy\\Test\\": "tests"
         }
+    },
+    "config": {
+        "sort-packages": true
     },
     "extra": {
         "branch-alias": {
